--- a/cfg/params_hybrid_astar.cfg
+++ b/cfg/params_hybrid_astar.cfg
@@ -8,6 +8,10 @@ gen = ParameterGenerator()
 gen.add("alpha",    double_t,    0, "Alpha", 50,  0, 100)
 gen.add("dist_dubin_shot",    double_t,    0, "Min_dist_from_obst", 8,  0, 100)
 gen.add("max_obs_dist", double_t, 0, "Maximum Obstacle distance",    50, 0,   100)
+gen.add("carlx", int_t, 0, "Car upper-left x",    -5, -100,   100)
+gen.add("carly", int_t, 0, "Car upper-left y",    -5, -100,   100)
+gen.add("carrx", int_t, 0, "Car bottom-right x",    5, -100,   100)
+gen.add("carry", int_t, 0, "Car bottom-right y",    5, -100,   100)
 
 
 exit(gen.generate(PACKAGE, "hybrid_astar", "params_hybrid_astar"))
