--- a/cfg/params_hybrid_astar.cfg
+++ b/cfg/params_hybrid_astar.cfg
@@ -12,6 +12,10 @@ gen.add("carlx", int_t, 0, "Car upper-left x",    -5, -100,   100)
 gen.add("carly", int_t, 0, "Car upper-left y",    -5, -100,   100)
 gen.add("carrx", int_t, 0, "Car bottom-right x",    5, -100,   100)
 gen.add("carry", int_t, 0, "Car bottom-right y",    5, -100,   100)
+gen.add("planner_grid_resolution", double_t, 0, "Planner Reslution ",    0.5, 0, 2)
+gen.add("WT",    double_t,    0, "Voronoi Weight", 0.3,  0, 5)
+
+
 
 
 exit(gen.generate(PACKAGE, "hybrid_astar", "params_hybrid_astar"))
