waypoint publisher added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,3 +46,7 @@ add_executable(velocity_publisher publisher/velocity_publisher.cpp )
 target_link_libraries(velocity_publisher ${OMPL_LIBRARIES} ${Boost_LIBRARIES} ${OpenCV_LIBRARIES} ${catkin_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 add_dependencies(velocity_publisher ${catkin_EXPORTED_TARGETS})
 
+add_executable(waypoint_node src/waypoint_publisher.cpp)
+target_link_libraries(waypoint_node ${OMPL_LIBRARIES} ${Boost_LIBRARIES} ${OpenCV_LIBS} ${catkin_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+add_dependencies(waypoint_node ${catkin_EXPORTED_TARGETS})
+
